   understands right now :UTF-8, :UCS-2 (bigendian), :UCS-4 (bigendian),
   :LATIN-1 and :ISO-8859-1. If built _without_ support for Unicode, only the
   last two are available.

 - Readtables now include entries for extended characters.

 - When a string is read, if the characters are base-char, the string is read
   as a base-string.

 - ECL supports external formats. They may be a symbol, denoting the encoding
   or an encoding option, an association table between bytes and unicode codes
   or a list of these. Some valid symbols are :DEFAULT, :LATIN-1, :ISO-8859-1,
   :UTF-8, :UCS-{2,4}{,BE,LE}, :US-ASCII :CR, :LF, :CRLF, :BIG-ENDIAN and
   :LITTLE-ENDIAN.

 - The external format options :BIG-ENDIAN or :LITTLE-ENDIAN also affect the
   behavior of READ-BYTE and WRITE-BYTE. Default value is :BIG-ENDIAN.

 - The interpretation of newline characters defaults to CRLF in Windows and
   LF elsewhere.

 - ECL accepts :UNSPECIFIC as a valid pathname type component.

* Bugs fixed:

 - (FLOOR X X), (CEILING X X), etc, might return a second value which is a
   signed zero if X is a float with a negative sign.

 - (SXHASH -0.0) != (SXHASH 0.0)

 - (UNREAD-CHAR c) did not decrease the file position accordingly.

 - FILE-STRING-LENGTH only works with file streams, for which it returns
   the right value, and with Gray streams, which output NIL.

 - When ECL is built with --enable-unicode, it uses its own database for
   Unicode properties instead of tolower, toupper, etc (Based on code
   from SBCL)

 - A bug in the binary file loaded prevented loading a recompiled file.

* AMOP:

 - In DEFCLASS, the :TYPE of slots was ignored.

 - ECL now sets the proper value for the SLOT-DEFINITION-INITFUNCTION and
   SLOT-DEFINITION-INITFORM of each effective and direct slot definition.

 - The canonicalized default arguments list now contains functions instead
   of the forms to be evaluated.

;;; Local Variables: ***
;;; mode:text ***
;;; fill-column:79 ***
;;; End: ***